--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "sass": "^1.80.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
