--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.1",
+    "pinia": "^2.2.6",
     "primevue": "^4.2.1",
     "sass": "^1.80.6",
     "vue": "^3.5.12",
