--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,25 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
 node_modules
-.DS_Store
 dist
 dist-ssr
 coverage
-*.local
-
-/cypress/videos/
-/cypress/screenshots/
 
 # Editor directories and files
 .vscode
-!.vscode/extensions.json
 .idea
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+.vs
 
-*.tsbuildinfo
-/.vs
+# Tauri
+src-tauri/target
+src-tauri/gen
+src-tauri/target/
+src-tauri/pkg/
+src-tauri/tauri-build.log
+src-tauri/Cargo.lock
+
+#Project specific
 storage
