--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "tauri": "tauri"
   },
   "dependencies": {
     "@primevue/themes": "^4.2.1",
@@ -21,6 +22,7 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2.1.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
