--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.1",
+    "@tauri-apps/api": "^2.1.1",
+    "@tauri-apps/plugin-shell": "^2.0.1",
     "pinia": "^2.2.6",
     "primevue": "^4.2.1",
     "sass": "^1.80.6",
