--- a/src-dotnet/CharKeeper.TauriPlugIn/CharKeeper.TauriPlugIn.csproj
+++ b/src-dotnet/CharKeeper.TauriPlugIn/CharKeeper.TauriPlugIn.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="TauriDotNetBridge" Version="2.1.0" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="mkdir &quot;$(SolutionDir)..\src-tauri\dotnet\&quot;&#xD;&#xA;copy /Y &quot;$(TargetDir)*&quot; &quot;$(SolutionDir)..\src-tauri\dotnet\&quot;" />
+  </Target>
+
 </Project>
