Extended and reorganized dotnet solution.

--- a/src-dotnet/API.TauriPlugIn/TauriPlugIn.csproj
+++ b/src-dotnet/API.TauriPlugIn/TauriPlugIn.csproj
@@ -9,13 +9,18 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec
+      Command="mkdir &quot;$(SolutionDir)..\src-tauri\dotnet\&quot;&#xD;&#xA;copy /Y &quot;$(TargetDir)*&quot; &quot;$(SolutionDir)..\src-tauri\dotnet\&quot;" />
+  </Target>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="TauriDotNetBridge" Version="2.1.0" />
   </ItemGroup>
 
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="mkdir &quot;$(SolutionDir)..\src-tauri\dotnet\&quot;&#xD;&#xA;copy /Y &quot;$(TargetDir)*&quot; &quot;$(SolutionDir)..\src-tauri\dotnet\&quot;" />
-  </Target>
+  <ItemGroup>
+    <ProjectReference Include="..\Data.Domain\Domain.csproj" />
+  </ItemGroup>
 
 </Project>
