--- a/src-dotnet/Infrastructure.DataAccess.SQLite/DataAccess.SQLite.csproj
+++ b/src-dotnet/Infrastructure.DataAccess.SQLite/DataAccess.SQLite.csproj
@@ -7,7 +7,7 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <OutputPath>..\..\output\tauri\$(Configuration)\dotnet</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <RootNamespace>API.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <RootNamespace>Infrastructure.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
@@ -15,13 +15,13 @@
   </Target>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
-    <PackageReference Include="TauriDotNetBridge" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\API.DTOs\DTOs.csproj" />
+    <ProjectReference Include="..\Domain.Models\Models.csproj" />
   </ItemGroup>
 
 </Project>
