--- a/src-dotnet/API.DTOs/DTOs.csproj
+++ b/src-dotnet/API.DTOs/DTOs.csproj
@@ -4,7 +4,15 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <OutputPath>..\..\output\tauri\$(Configuration)\dotnet</OutputPath>
+    <AppendTargetFrameworkToOutputPath>true</AppendTargetFrameworkToOutputPath>
     <RootNamespace>API.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec
+      Command="mkdir &quot;$(SolutionDir)..\src-tauri\dotnet\&quot;&#xD;&#xA;copy /Y &quot;$(TargetDir)*&quot; &quot;$(SolutionDir)..\src-tauri\dotnet\&quot;" />
+  </Target>
 
 </Project>
